--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
+    "i": "^0.3.7",
+    "npm": "^8.19.2",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
